--- a/02.calendar/package.json
+++ b/02.calendar/package.json
@@ -9,6 +9,7 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "minimist": "^1.2.7",
     "moment": "^2.29.4"
   }
