--- a/04.class/package.json
+++ b/04.class/package.json
@@ -7,5 +7,8 @@
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "enquirer": "^2.3.6"
   }
 }
